src/test/ui/issues/issue-19982.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-19982.rs:15:10
   |
LL | impl Fn<(&(),)> for Foo { } //~ ERROR missing lifetime specifier
   |          ^ expected lifetime parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
