src/test/ui/issues/issue-19982.rs
#![feature(unboxed_closures)]

struct Foo;

impl Fn<(&(),)> for Foo { } //~ ERROR missing lifetime specifier

fn main() {}
